2016-03-28  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (which): Don't exclude symbolic links--Debian's
	/bin/which doesn't. Modern systems rely too heavily on symbolic
	links (eg. alternatives).

2016-03-28  Ben Elliston  <bje@gnu.org>

	* baseboards/multi-sim.exp: Indent properly.

2016-03-28  Ben Elliston  <bje@gnu.org>

	* lib/rlogin.exp (rlogin_open): Return -1 if unable to spawn
	rlogin. Identified by Frink.

2016-03-28  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Use 'array exists' for testing array existence
	rather than 'info exists'.

2016-03-28  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Fixes identified by the Frink static analyser:
	  (1) use -- in switch commands for safety,
	  (2) remove unreachable return commands after error commands,
	  (3) replace abbreviated "info proc" with "info procs",
	  (4) use -- in unset commands for safety where the variable name
	      is itself a variable.
	* lib/dg.exp: Likewise.
	* lib/debugger.exp: Likewise.
	* lib/framework.exp: Likewise.
	* lib/remote.exp: Likewise.
	* lib/target.exp: Likewise.
	* lib/targetdb.exp: Likewise.
	* lib/telnet.exp: Likewise.
	* lib/utils.exp: Likewise.

2016-03-28  Ben Elliston  <bje@gnu.org>

	* Makefile.am: Remove references to Docbook and friends.
	* configure.ac: Likewise.
	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* doc/dejagnu.xml: Remove.
	* doc/legal.xml: Likewise.
	* doc/ref.xml: Likewise.
	* doc/user.xml: Likewise.

2016-03-28  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (exp_continue): Remove old compatibility
	wrapper. Expect deprecated 'continue -expect' in August 1997.

2016-03-28  Ben Elliston  <bje@gnu.org>

	* NEWS: Update.

2016-03-28  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (which): Reimplement to more closely mimic the
	behaviour of the UNIX which utility.
	* testsuite/runtest.all/utils.test: Test proc which.

2016-03-27  Ben Elliston  <bje@gnu.org>

	* lib/remote.exp (standard_wait): Append any trailing characters