@@ -1,5 +1,6 @@
 # Copyright (C) 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001
-# 2002, 2003, 2005, 2006, 2007, 2008, 2009, 2010, 2011 Free Software Foundation, Inc.
+# 2002, 2003, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014,
+# 2015, 2016 Free Software Foundation, Inc.
 #
 # This file is part of DejaGnu.
 #
@@ -668,9 +669,12 @@ proc find_g++ {} {
     global tool_root_dir
 
     if {![is_remote host]} {
-	set file [lookfor_file $tool_root_dir g++]
+	set file [lookfor_file $tool_root_dir xg++]
 	if { $file == "" } {
-	    set file [lookfor_file $tool_root_dir gcc/g++]
+	    set file [lookfor_file $tool_root_dir gcc/xg++]
+	}
+	if { $file == "" } {
+	    set file [lookfor_file $tool_root_dir g++]
 	}
 	if { $file != "" } {
 	    set CC "$file -B[file dirname $file]/"
